project('benchmark_images')

all_images = files(['large_rgb8.png',
                    'large_rgba8.png',
                    'large_palette.png',
                    'medium_rgb8.png',
                    'medium_rgba8.png',
                    'small_rgb8.png',
                    'small_rgba8.png'])

